--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -309,3 +309,13 @@ padding-right: 50px;
 .register-button:active {
   background-color: #1c6d3e;
 }
+
+.div-block {
+  display: block;
+  width: 100%;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
